  - old-style-connect warns for QMenu::addAction() and QMessageBox::open() too now

* v1.5 (January 31st, 2019)
  - New Checks:
    ifndef-define-typo
    lowercase-qml-type-name
    qrequiredresult-candidates
  - New Fixits:
    range-loop now supports adding missing refs or const-ref
    range-loop now supports adding qAsConst()
    function-args-by-ref now adding missing refs or const-ref (experimental)
    Introduced CLAZY_FIXIT_SUFFIX env variable
  - Removed support for the obscure -DCLAZY_BUILD_UTILS_LIB to simplify the CMakeLists.txt
  - Renamed the clazy plugin from ClangLazy.so to ClazyPlugin.so
  - fully-qualified-moc-types now warns for slot/invokable return values too. They need to be fully qualified for QML.
  - Fixed a crash (clang assert) in raw-environment-function


* v1.6 (October 12, 2019)
  - New Checks:
    - heap-allocated-small-trivial-type
    - signal-with-return-value
    - qproperty-type-mismatch, contributed by Jean-Michaël Celerier
  - Removed level3. Moved all level3 checks to manual level. Doesn't make sense to enable all of them. Each one must be carefully considered.
  - Fixed regressions with LLVM 9.0
  - Minimum LLVM was bumped to 5.0
  - Fixit infrastructure was overhauled
    Clazy no longer rewrites files directly, to avoid races when parallel invocations change the same header.
    Clazy now exports a yaml file with the replacements, to be applied with clang-apply-replacements. The same way other clang tooling does it.
    The way to enable code rewrite is now: -Xclang -plugin-arg-clazy -Xclang export-fixes for clang or -export-fixes=somefile.yaml for clazy-standalone
    All other fixit arguments and fixit env variables were removed
    Thanks to Christian Gagneraud for contributing the fixit yaml exporter!

* v1.7 (, 2020)
  - New Checks:
    - overloaded signal
  - qstring-arg warns when using QLatin1String::arg(int), as it casts to QChar